# synth

./: .env.example  .gitignore  .mcp.json  Dockerfile  GoT.tex  README.md  docker-compose.yml  docs.md  pyproject.toml  requirements.txt  run.sh
.agents/skills/synth-mcp-bridge/: SKILL.md
.agents/skills/synth-opseeq-connect/: SKILL.md
.agents/skills/synth-trading-desk/: SKILL.md
app/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/server/: db.ts  index.ts  kelly.ts  memory.ts  simWallet.ts
app/src/: App.tsx  Landing.tsx  OpseeqThinkUI.tsx  api.ts  index.css  main.tsx  pretext.tsx  scoring.ts  synth-mermaid-fx.css  types.ts
app/tests/: db.test.ts  scoring.test.ts  simWallet.test.ts
docs/: README.md  prd-ensemble-architecture.md  whitepaper.md
docs/api/: reference.md
docs/guides/: authentication.md  getting-started.md  websockets.md
scripts/: boot.sh  install-launcher.sh  preflight.py
src/synthesis/: __init__.py  config.py  exceptions.py
src/synthesis/ai/: __init__.py  engine.py  models.py  prompts.py
src/synthesis/audit/: __init__.py  logger.py
src/synthesis/calibration/: __init__.py  calibrator.py
src/synthesis/core/: auth.py  http.py  models.py  websocket.py
src/synthesis/ensemble/: __init__.py  engine.py
src/synthesis/finetune/: __init__.py  pipeline.py
src/synthesis/guard/: __init__.py  gate.py
src/synthesis/islands/: __init__.py
src/synthesis/mcp_server/: __init__.py  server.py
src/synthesis/predictions/: __init__.py  engine.py  models.py
src/synthesis/server/: __init__.py  __main__.py  (+3 more)
(+27 files in other folders)
