[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthesis-trade"
version = "0.1.0"
description = "AI Trading Desk for Synthesis.trade — unified prediction market trading across Polymarket and Kalshi"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
ws = [
    "websockets>=13.0",
]
mcp = [
    "mcp[cli]>=1.20",
]
ai = [
    "openai>=1.0",
]
ai-extras = [
    "openai>=1.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsforecast>=2.0",
    "pandas>=2.2",
]
all = [
    "synthesis-trade[server,ws,mcp,ai,ai-extras]",
]

[project.scripts]
synthesis-server = "synthesis.server:main"
synthesis-mcp = "synthesis.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/synthesis"]
